[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.43",features = ["macros","rt-multi-thread"]}
iroh = "0.32.1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1" }
tracing = "0.1"
rand_chacha = "0.3.1"
rand = "0.8"
futures-lite = "2.6.0"